--- a/workflows/cloudscale/image-steps.yml
+++ b/workflows/cloudscale/image-steps.yml
@@ -12,7 +12,7 @@ steps:
   run: |
     set -euo pipefail
 
-    . ./semver.sh
+    . ./workflows/cloudscale/scripts/semver.sh
 
     MAJOR=0
     MINOR=0
