--- a/workflows/cloudscale/decommission-steps.yml
+++ b/workflows/cloudscale/decommission-steps.yml
@@ -16,6 +16,69 @@ steps:
       echo "Cluster domain and confirmation do not match."
       exit 1
     fi
+- match: And I delete all Load Balancer services and Load Balancers
+  description: |-
+    This step deletes all services of type LoadBalancer from the cluster.
+    It then deletes all LoadBalancer instances as well, so that the corresponding Cloudscale resources can be decommissioned by the controller.
+  inputs:
+  - name: kubeconfig_path
+  run: |
+    set -euo pipefail
+    export KUBECONFIG="${INPUT_kubeconfig_path}"
+    echo '#  Deleting Services ...  #'
+    kubectl delete svc --field-selector spec.type=LoadBalancer -A
+    echo '#  Deleted Services.  #'
+    echo '#  Deleting LoadBalancers ...  #'
+    kubectl delete loadbalancers -A --all
+    echo '#  Deleted LoadBalancers.  #'
+- match: And I disable machine autoscaling
+  description: |-
+    This step disables autoscaling of machinesets.
+  inputs:
+  - name: kubeconfig_path
+  run: |
+    set -euo pipefail
+    export KUBECONFIG="${INPUT_kubeconfig_path}"
+    kubectl delete machineautoscaler -A --all
+- match: And I delete all persistent volumes
+  description: |-
+    This step deletes all persistent volumes on the cluster, so that the corresponding Cloudscale resources can be decommissioned by the controller.
+
+    By cordoning all non-master nodes and deleting all their pods (except the csi driver pods) we ensure that no new PVs are created, while the existing ones can be cleaned up. Deleting all pods has the additional benefit that we don’t have to deal with PDBs when deleting the machinesets in the next step.
+  inputs:
+  - name: kubeconfig_path
+  run: |
+    set -euo pipefail
+    export KUBECONFIG="${INPUT_kubeconfig_path}"
+    kubectl cordon -l node-role.kubernetes.io/worker
+    kubectl get po -A -oyaml | yq '.items = [.items[] |
+        select(.spec.nodeName | test("master-") | not) |
+        select(.metadata.namespace != "syn-csi-cloudscale")]' |\
+        kubectl delete --wait=false -f-
+    kubectl delete pvc -A --all --wait=false
+    kubectl wait --for=delete pv --all --timeout=120s
+
+    echo '########################################################'
+    echo '#                                                      #'
+    echo '#  Please verify that all PVs were deleted properly.   #'
+    echo '#                                                      #'
+    echo '########################################################'
+    echo
+    echo If the cluster still has PVs, please manually run the following:
+    echo "  "kubectl delete pv --all
+    sleep 2
+- match: And I delete all machinesets
+  description: |-
+    This step deletes all machinesets from the cluster, allowing all associated nodes to be decommissioned by the controller.
+  inputs:
+  - name: kubeconfig_path
+  run: |
+    set -euo pipefail
+    kubectl -n openshift-machine-api delete machinesets --all
+    kubectl -n openshift-machine-api wait --for=delete \
+        machinesets,machines --all --timeout=120s
+    kubectl get nodes
+
 - match: Then I save the loadbalancer metadata
   description: |-
     This step gathers metadata on the LoadBalancer instances (such as their icinga zone and backup server), such that they can be properly decommissioned down the line.
